css styling for fun

--- a/client/styles.css
+++ b/client/styles.css
@@ -1,3 +1,34 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Sigmar&display=swap');
+
+html{
+  font-family: fantasy, cursive; 
+}
+.container{
+  background-color:lightblue;
+  margin-left: 60px;
+  margin-right: 60px;
+}
+
+#mainDiv{
+  background-color: lightcyan;
+}
+
+h1{
+  font-family: fantasy, cursive; 
+  font-size: 40px;
+  text-align: center;
+}
+
+p{
+  font-size: 18px;
+}
+#aboutSmartPlan{
+  font-family: fantasy, cursive; 
+  font-size: 18px;
+  text-align: center;
+  margin-bottom: 0;
+}
 .scene {
     display: inline-block;
     width: 200px;
@@ -8,7 +39,7 @@
   }
   
   #smartcards{
-    background-color: blue;
+    /* background-color: rgb(90, 90, 133); */
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -38,21 +69,118 @@
     backface-visibility: hidden;
   }
   
-  .card__face--front {
-    background: crimson;
+  .card__face--frontS {
+    background: #00adb4;
     font-size: 80px;
     line-height: 260px;
   }
   
-  .card__face--back {
-    background: slateblue;
+  .card__face--backS {
+    background: #00aeb4af;
     transform: rotateY(180deg);
     font-size: 20px;
     line-height: 30px;
     text-align: center;
   }
   
+  .card__face--frontM {
+    background: #79ac35;
+    font-size: 80px;
+    line-height: 260px;
+  }
+  
+  .card__face--backM {
+    background: #79ac35cf;
+    transform: rotateY(180deg);
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+  }
+
+  .card__face--frontA {
+    background: #e87451;
+    font-size: 80px;
+    line-height: 260px;
+  }
+  
+  .card__face--backA {
+    background: #e87451d5;
+    transform: rotateY(180deg);
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+  }
+
+  .card__face--frontR {
+    background: #e44a5e;
+    font-size: 80px;
+    line-height: 260px;
+  }
+  
+  .card__face--backR {
+    background: #e44a5fcd;
+    transform: rotateY(180deg);
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+  }
+  .card__face--frontT {
+    background: #6a78b3;
+    font-size: 80px;
+    line-height: 260px;
+  }
+  
+  .card__face--backT {
+    background: #6a79b3b1;
+    transform: rotateY(180deg);
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+  }
+
+  #list{
+    font-size: large;
+  }
   .center {
 
+    text-align: center;
+  }
+
+  img{
+    /* border: 0px; */
+    border: none;
+    height: 215px;
+    width: 230px;
+    outline: none;
+    border-color: #ffffff00;
+    outline: #ffffff00;
+    
+  }
+
+  #topTwoBtns{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+
+  #compBtn, #fortBtn{
+    display: flex;
+    flex-direction: column;
+  }
+
+  #complimentButton, #fortuneButton{
+    font-size: large;
+  }
+
+  #letter-1, #letter-2, #letter-3, #letter-4, #letter-5{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-evenly;
+    align-items: center;
+
+  }
+
+  #apiDiv{
+    background-color: lightsteelblue;
     text-align: center;
   }
